--- a/Ch1_Degradation.Rmd
+++ b/Ch1_Degradation.Rmd
@@ -65,7 +65,7 @@ install.packages("devtools")
 devtools::install_github("an-bui/calecopal")
 ```
 ```{r An Bui California color names}
-
+names(cal_palettes)
 ```
 
 
@@ -110,12 +110,13 @@ abcover_full <- read.csv("~/Dropbox/GRADSCHOOL/Dissertation/R_dissertation/chapa
 # abcoverdist <- read_csv("~/Dropbox/GRADSCHOOL/Dissertation/R_dissertation/deg_percentcover_bydistance.csv") # this file is here just in case I need it.
 
 # native shrub density 
-shrubdensitylife <- read_csv("~/Dropbox/GRADSCHOOL/Dissertation/R_dissertation/deg_beltdensity_bylifestage.csv") #StandType, Site, rep, ScientificName, dead, immature, mature, resprout, seedling.
+shrubdensitylife_full <- read_csv("~/Dropbox/GRADSCHOOL/Dissertation/R_dissertation/deg_beltdensity_bylifestage.csv") #StandType, Site, rep, ScientificName, dead, immature, mature, resprout, seedling.
+
 shrubdensityspp <- read_csv("~/Dropbox/GRADSCHOOL/Dissertation/R_dissertation/deg_beltdensity_byspecies.csv")
 shrubdensityalive <- read_csv("~/Dropbox/GRADSCHOOL/Dissertation/R_dissertation/deg_beltdensity_seperatealive.csv")
 
 # stand height 
-standheight <- read_csv("~/Dropbox/GRADSCHOOL/Dissertation/R_dissertation/deg_maxheight.csv")
+standheight_full <- read_csv("~/Dropbox/GRADSCHOOL/Dissertation/R_dissertation/deg_maxheight.csv")
 
 # BELOW GROUND #
 # overall species richness, native richness, germination
@@ -315,14 +316,14 @@ print(abrich_totalrich_tukey)
 ```
 Fourth, and **finally**, plot **TOTAL SPECIES RICHNESS**!
 
-```{r brich_totalrich color pallet}
+```{r abrich_totalrich color pallet}
 cal_palette(name = "chaparral2", n = 3, type = "continuous")
 #Intact, Matrix, Degraded
 # values = c('#D98A63', '#9FC2B0', '#A7C2CD')
 ```
 
 + column graph
-```{r column total species richnes , include = TRUE}
+```{r abrich column total species richness, include = TRUE}
 
 #  column plot
 abrich_totalrich_plot <- ggplot(abrich_totalrich_meanSD, aes(x = standtype, y = mean, fill = standtype)) +
@@ -338,7 +339,7 @@ abrich_totalrich_plot + scale_x_discrete(limits=c("intact", "matrix", "degraded"
 ```
 
 + line graph
-```{r line graph abrich total species richness, include=TRUE}
+```{r abrich line graph abrich total species richness, include=TRUE}
 #  line plot
 ggplot(abrich_totalrich_meanSD, aes(x = standtype, y = mean, fill = standtype)) +
   geom_line() +
@@ -359,7 +360,7 @@ ggplot(abrich_totalrich_meanSD, aes(x = standtype, y = mean, fill = standtype)) 
   + 3. if the number of unique native species at each sampling location are different by standtype
 
 First, I need to filter for only native species. 
-```{r ab native species richness, message=FALSE}
+```{r abrichnat native species richness, message=FALSE}
 abrich_natrich <- abrich %>% # call tibble
   filter(site_rep != "Intact4_4") %>% # omit data from Intact 4
   filter(!is.na(species)) %>% # omit blank cells in species 
@@ -371,7 +372,7 @@ abrich_natrich <- abrich %>% # call tibble
 print(abrich_natrich)
 ```
 Second, calculate the average and SE of unique native species at each sampling location.
-```{r calculating native species richness mean and SD, message=FALSE}
+```{r abrichnatcalculating native species richness mean and SD, message=FALSE}
 
 abrich_natrich_meanSD <- abrich_natrich %>%
   group_by(standtype) %>%
@@ -394,26 +395,21 @@ summary.aov(abrich_natrich_anova) #show ANOVA output
 ```
 
 + Tukey test post-hoc to find differences
-```{r tukey posthoc, include=TRUE}
+```{r abrich_natrich tukey posthoc, include=TRUE}
 abrich_natrich_tukey <- TukeyHSD(abrich_natrich_anova, conf.level=.95) 
 print(abrich_natrich_tukey)
 
 ```
 Fourth, and **finally**, plot **NATIVE SPECIES RICHNESS**!
 
-+ color pallet <3
-```{r An Bui CA colors}
-names(cal_palettes)
-```
-
-```{r color pallet for abrich_natrich}
+```{r abrich_natrich color pallet}
 cal_palette(name = "chaparral2", n = 3, type = "continuous")
 #Intact, Matrix, Degraded
 # values = c('#D98A63', '#9FC2B0', '#A7C2CD')
 ```
 
 + column graph
-```{r column native species richnes , include = TRUE}
+```{r abrich_natrich column native species richnes , include = TRUE}
 
 #  column plot
 abrich_natrich_plot <- ggplot(abrich_natrich_meanSD, aes(x = standtype, y = mean, fill = standtype)) +
@@ -431,7 +427,7 @@ abrich_natrich_plot + scale_x_discrete(limits=c("intact", "matrix", "degraded"),
 ```
 
 + line graph
-```{r line graph abrich total species richness, include=TRUE}
+```{r abrich_natrich line graph abrich total species richness, include=TRUE}
 #  line plot
 ggplot(abrich_natrich_meanSD, aes(x = standtype, y = mean, fill = standtype)) +
   geom_line() +
@@ -477,43 +473,55 @@ class(abcover_full) # now a tibble
 
 ```
 ... including reordering the classes...
-```{r reorder classes to Intact Matrix Degraded}
+```{r ab percent cover reorder classes to Intact Matrix Degraded}
 abcover_full_v <- abcover_full %>%
   mutate(standtype = fct_relevel(standtype, 
             "intact", "matrix", "degraded"))
 ```
 
-... and creating new columns for SITE_REP and SITE_REP_DISTANCE
-```{r create site_rep column and site_rep_dist column}
+... and creating new columns for SITE_REP and SITE_REP_DISTANCE and STAND_STATUS
+```{r ab percent cover create site_rep column and site_rep_dist column}
 abcover_full_v$site_rep <- paste(abcover_full_v$site, abcover_full_v$rep, sep="_") # combine site and rep to one column
 
 abcover_full_v$site_rep_dist <- paste(abcover_full_v$site_rep, abcover_full_v$distance, sep="_") # combine site and rep to one column
 
+abcover_full_v$stand_status <- paste(abcover_full_v$standtype, abcover_bystatus$status, sep="_") # combine stand and status label to one column
+
 head(abcover_full_v) # look at new columns
 ```
 ... and omit "ground" as a status.
-```{r filter for native and non-native only}
+```{r ab percent cover filter for native and non-native only}
 abcover_full_v_omitground <- filter(abcover_full_v, status !="ground")
 head(abcover_full_v_omitground)
 ```
 
-Now, I need to calculate % cover of native and non-native cover by site_rep_dist.
-```{r unique species by site_rep_dist, inclue = TRUE}
+Now, I need to identify the unique species at each site_rep_dist to get rid of duplicate species recordings. (e.g., Present at one distance = 1/41 to get percent cover)
+```{r ab percent cover unique species by site_rep_dist, inclue = TRUE}
 abcover_bystatus <- abcover_full_v_omitground %>% 
   group_by(standtype, site, rep, site_rep, status) %>% 
   filter(!is.na(species)) %>% # omit blank cells in species 
   dplyr::summarize(count_per_dist = n_distinct(site_rep_dist), percentcover = n_distinct(site_rep_dist)/41)
 # print(abcover_bystatus) # prints all rows of table
 # head (abcover_bystatus) # prints first 6 rows of table
-view(abcover_bystatus) # prints to new tab
+head(abcover_bystatus) # prints to new tab
+
+# abcover_bystatus is organized by native and nonnative status, it does NOT include lifeform or species
 ```
 
 ... and then calculate means and SD by status (native, non-native) by stand type. 
-```{r calculating percent cover mean and SD by status by stand, include=TRUE}
+```{r ab percent cover calculating percent cover mean and SD by status by stand, include=TRUE}
 abcover_bystatus_meanSD <- abcover_bystatus %>%
+#  group_by(standtype = "intact", status) %>% 
   group_by(standtype, status) %>% 
   summarise_at(vars(percentcover), funs(mean,sd)) %>% 
   print(abcover_bystatus_meanSD)
+```
+
+```{r ab percent cover aov by native status}
+
+### THIS IS NOT DONE YET
+
+
 
 abcover_bystatus_aov <- abcover_bystatus_meanSD %>% 
   filter(status =="nonnative") %>% 
@@ -537,10 +545,6 @@ abcover_bystatus_aov <- abcover_bystatus_meanSD %>%
 
 abcover_bystatus_aov <-aov(percentcover ~ status, data = abcover_bystatus) 
 print(abcover_bystatus_aov)
-```
-
-
-```{r}
 abcover_bystatus_aov <- aov(
   percentcover ~ status, data = abcover_bystatus) 
 
@@ -550,8 +554,7 @@ summary.aov(abcover_bystatus_aov) #show ANOVA output for status at INTACT stand
 ... and, finally, calculate significant differences.
 + ANOVA - to compare means of groups 
 ```{r create a new column just in case, include=FALSE}
-abcover_bystatus$stand_status <- paste(abcover_bystatus$standtype, abcover_bystatus$status, sep="_") # combine stand and status label to one column
-view(abcover_bystatus)
+
 ```
 1) standtypes by their native or nonnative species
 ```{r filter by status, include=TRUE}
@@ -635,43 +638,79 @@ abcover_byspecies %>%
   dplyr::summarize(count_per_dist = n_distinct(site_rep_dist))
 ```
 
-## THIS IS SO MESSY
-Now, I need to calculate % cover of native and non-native cover by site_rep_dist.
-```{r percent cover of lifeform by site_rep, inclue = TRUE}
-abcover_bylf <- abcover_full_v_omitground %>% 
-  group_by(standtype, site, rep, site_rep, lifeform) %>% 
+
+
+## 4. By Lifeform
+
+First, I need to count unique occurances of each native and non-native lifeform at each site_rep_dist so I can calculate % cover.
+```{r percent cover of lifeform by status by site_rep, inclue = TRUE}
+abcover_bylf_bystatus <- abcover_full_v_omitground %>% 
+  group_by(standtype, site, rep, site_rep, lifeform, status) %>% 
   filter(!is.na(species)) %>% # omit blank cells in species 
   dplyr::summarize(count_per_dist = n_distinct(site_rep_dist), percentcover = n_distinct(site_rep_dist)/41)
 # print(abcover_bystatus) # prints all rows of table
 # head (abcover_bystatus) # prints first 6 rows of table
-head(abcover_bylf) # prints to new tab
+head(abcover_bylf_bystatus) # prints to new tab
 ```
-.. and then calculate means and SD by status (native, non-native) by stand type. 
-```{r calculating percent cover mean and SD by lifeform by stand, include=TRUE}
-abcover_bylf_meanSD <- abcover_bylf %>%
-  group_by(standtype, lifeform) %>%
+Second I need to calculate means and SD by lifeform by status (native, non-native) by stand type. 
+```{r abcover by lf by status percent cover mean and SD, include=TRUE}
+
+abcover_bylf_bystatus_meanSD <- abcover_bylf_bystatus %>%
+  group_by(standtype, lifeform, status) %>%
+#  group_by(standtype = "intact", lifeform, status) %>%
+#  group_by(standtype = "matrix", lifeform, status) %>%
+# group_by(standtype = "degraded", lifeform, status) %>%
   summarise_at(vars(percentcover), funs(mean,sd)) 
  
-print(abcover_bylf_meanSD)
+head(abcover_bylf_bystatus_meanSD)
 ```
-```{r}
-abcover_bylf_aov <- aov(percentcover ~ lifeform + standtype, data = abcover_bylf) 
-summary.aov(abcover_bylf_aov) #show ANOVA output for status at INTACT stand
+```{r plot abcover_bylf_bystatus_meanSD, include = TRUE}
+
+
+#  column plot
+abcover_bylf_bystatus_plot <- ggplot(abcover_bylf_bystatus_meanSD, aes(x = standtype, y = mean, fill = status )) +
+  facet_wrap(~ lifeform) +
+  geom_col(position = "dodge", width = 0.8) +
+  geom_errorbar(aes(ymin=mean-sd, ymax=mean+sd), width=.2,
+                 position=position_dodge(.9)) +
+  labs(title = "Percent Cover by lifeform", x = "Stand Type", y = "Average Percent Cover") +
+  scale_fill_manual(values = c('#D3E3CA', '#92A587', '#2F3525')) + # manual colors
+#   scale_fill_manual(values = cal_palette('chaparral3')) + # continuous colors
+                       theme_bw()
+abcover_bylf_bystatus_plot + scale_x_discrete(limits=c("intact", "matrix", "degraded"),
+                                         labels=c("intact" = "Intact", "matrix" = "Matrix", "degraded" = "Degraded"))
 ```
-+ Tukey test post-hoc to find differences
-```{r abcoverbystatus tukey posthoc, include=TRUE}
-abcover_bylf_tukey <- TukeyHSD(abcover_bylf_aov, conf.level=.95) 
-print(abcover_bylf_tukey)
 
+```{r ab percent cover aov Intact by lf by status}
+
+abcover_bylf_bystatus_meanSD_int <- filter(abcover_bylf_bystatus_meanSD, standtype == "intact")
+head(abcover_bylf_bystatus_meanSD_int) #selecting for data from Intact only
+```
+
+```{r ab percent cover aov SHRUB by standtype}
+abcover_shrub_aov <- aov(percentcover ~ factor(lifeform == "shrub") + standtype, data = abcover_bylf_bystatus) 
+summary.aov(abcover_shrub_aov)
+
+abcover_bylf_bystatus_meanSD_int_aov <- aov(percentcover ~ factor(lifeform == "shrub"), data = abcover_bylf_bystatus) 
+
+
+summary.aov(abcover_bylf_bystatus_meanSD_int_aov) #anova by status x lifeform at Intact
+```
+
+```{r ab percent cover Tukey HSD Intact by lf by status}, include=TRUE}
+abcover_bylf_bystatus_meanSD_int_tukey <- TukeyHSD(abcover_shrub_aov, conf.level=.95) 
+print(abcover_bylf_bystatus_meanSD_int_tukey)
 ```
 
 
-## 5. Shrub cover 
+## 5. Shrub height 
 
-### With my shrub percent cover data, I specifically want to look at:
-  + 1. Shrub percent cover by stand
-  + 2. Percent cover by status by lifeform (fern, herb, shrub, grass) by stand
+### With my shrub height data, I specifically want to look at:
+  + average height of 
 
+```{r shrub height clean data}
+
+```
 
 
 
