--- a/Ch1_Degradation.Rmd
+++ b/Ch1_Degradation.Rmd
@@ -112,8 +112,8 @@ abcover_full <- read.csv("~/Dropbox/GRADSCHOOL/Dissertation/R_dissertation/chapa
 # native shrub density 
 shrubdensitylife_full <- read_csv("~/Dropbox/GRADSCHOOL/Dissertation/R_dissertation/deg_beltdensity_bylifestage.csv") #StandType, Site, rep, ScientificName, dead, immature, mature, resprout, seedling.
 
-shrubdensityspp <- read_csv("~/Dropbox/GRADSCHOOL/Dissertation/R_dissertation/deg_beltdensity_byspecies.csv")
-shrubdensityalive <- read_csv("~/Dropbox/GRADSCHOOL/Dissertation/R_dissertation/deg_beltdensity_seperatealive.csv")
+shrubdensityspp_full <- read_csv("~/Dropbox/GRADSCHOOL/Dissertation/R_dissertation/deg_beltdensity_byspecies.csv")
+shrubdensityalive_full <- read_csv("~/Dropbox/GRADSCHOOL/Dissertation/R_dissertation/deg_beltdensity_seperatealive.csv")
 
 # stand height 
 standheight_full <- read_csv("~/Dropbox/GRADSCHOOL/Dissertation/R_dissertation/deg_maxheight.csv")
@@ -210,8 +210,12 @@ Convert dataframe to tibble:
 
 + d. `fivenum()` for all 5 summaries 
 
-
-
++ e. omit variable from data 
+  filter(site_rep != "Intact4_4") %>% #omit Intact 4 from data
++ f. omit NAs from a column 
+  filter(!is.na(species)) %>% # omit blank cells in species 
+  
+  
 # **LET'S DO THIS! :D**
 
 
@@ -703,16 +707,160 @@ print(abcover_bylf_bystatus_meanSD_int_tukey)
 ```
 
 
-## 5. Shrub height 
+## 5. Stand height 
 
-### With my shrub height data, I specifically want to look at:
-  + average height of 
+### With my stand height data, I specifically want to look at:
+  + average height of shrubs by stand type
+  + heterogeneity of stand height by standtype (chi-squared test)
 
 ```{r shrub height clean data}
+#includes species, but not lifeform
 
+dim(standheight_full)
+# [1] 999  24
+head(standheight_full)
+tail(standheight_full)
+
+# convert dataframe to tibble
+standheight_full <- standheight_full %>% 
+  as_tibble(standheight_full) 
+
+class(standheight_full) # now a tibble
+# [1] "tbl_df"     "tbl"        "data.frame"
+
+```
+Omit NAs and Reorder standtypes: Inact, Matrix, Degraded
+```{r stand height reorder classes to Intact Matrix Degraded}
+standheight_full_crop <- standheight_full[1:654, 1:6]
+
+standheight_full_v <- standheight_full_crop %>%
+    mutate(standtype = fct_relevel(standtype, 
+            "Intact", "Matrix", "Degraded"))
+```
+
+Creating new columns for SITE_REP and SITE_REP_DISTANCE and STAND_STATUS
+```{r stand height create site_rep column and site_rep_dist column}
+standheight_full_v$site_rep <- paste(standheight_full_v$site, standheight_full_v$Transect_rep, sep="_") # combine site and rep to one column
+
+head(standheight_full_v) # look at new columns
+```
+```{r stand height mean SD at level of site_rep, include=TRUE}
+standheight <- standheight_full_v %>% 
+  filter(site_rep != "Intact4_4")  #omit Intact 4 from data# rename dataframe
+
+standheight_siterep_meanSD <- standheight %>%
+  group_by(standtype, site_rep) %>%
+  summarise_at(vars(height_cm), funs(mean, sd)) %>% 
+  rename (mean_height_cm = mean) %>% 
+  print(standheight_siterep_meanSD)
+```
+```{r stand height mean SD, aov, tukey at level of site rep to calculate at level of standtype, include=TRUE}
+standheight_siterep_standtype_meanSD <- standheight_siterep_meanSD %>%
+  group_by(standtype) %>%
+  summarise_at(vars(mean_height_cm), funs(mean, sd)) %>% 
+  print(standheight_siterep_standtype_meanSD)
+
+standheight_siterep_standtype_aov <- aov((mean_height_cm ~ standtype) , data = standheight_siterep_meanSD)
+summary.aov(standheight_siterep_standtype_aov)
+
+standheight_siterep_standtype_tukey <- TukeyHSD(standheight_siterep_standtype_aov, conf.level=.95) 
+print(standheight_siterep_standtype_tukey)
+```
+```{r stand height check mean and sd, include=FALSE}
+# Create a vector. 
+intact <- c(153.94872, 89.36585, 215.07317, 195.68293)
+
+# Find Mean.
+intact_mean <- mean(intact)
+intact_sd <- sd(intact)
+print(intact_mean)
+# [1] 163.5177
+
+print(intact_sd)
+# [1] 55.62563
+```
+
+```{r plot standheight_meanSD_standtype, include = TRUE}
+#  column plot
+#  
+#  standheight_meanSD_siterep_standtype
+#
+standheight_siterep_standtype_meanSD_plot <- ggplot(standheight_siterep_standtype_meanSD, aes(x = standtype, y = mean, fill = standtype)) +
+  geom_col(position = "dodge", width = 0.8) +
+  geom_errorbar(aes(ymin=mean-sd, ymax=mean+sd), width=.2,
+                 position=position_dodge(.9)) +
+  labs(title = "Maximum Stand Height (cm)", x = "Stand Type", y = "Average Maximum Height (cm)") +
+  scale_fill_manual(values = c('#D3E3CA', '#92A587', '#2F3525')) + # manual colors
+#   scale_fill_manual(values = cal_palette('chaparral3')) + # continuous colors
+                       theme_bw()
+
+standheight_siterep_standtype_meanSD_plot
+```
+## 6. SHRUB DENSITY
+
+```{r shrub density clean data, include=FALSE}
+dim(shrubdensitylife_full)
+head(shrubdensitylife_full)
+tail(shrubdensitylife_full)
+
+# convert dataframe to tibble
+shrubdensitylife_full <- shrubdensitylife_full %>% 
+  as_tibble(shrubdensitylife_full) 
+
+class(shrubdensitylife_full) # now a tibble
+# [1] "tbl_df"     "tbl"        "data.frame"
+
+shrubdensitylife_transposded <- gather(shrubdensitylife_full, "status", "count", 5:9) 
+head(shrubdensitylife_transposded)
+```
+... and create a new column for SITE_REP.
+```{r shrub density site_rep column}
+shrubdensity <- shrubdensitylife_transposded
+
+shrubdensity$site_rep <- paste(shrubdensity$Site, shrubdensity$rep, sep="_") # combine site and rep to one column
+
+head(shrubdensity) # look at new column site_rep, last column
+```
+
+Second, sum the number of alive shrubs per site_rep
+```{r shrub density by site_rep, include=TRUE}
+
+shrubdensity_sum_all <- shrubdensity %>% # call tibble
+  filter(site_rep != "Intact4_4") %>% #omit Intact 4 from data
+  group_by(StandType, site_rep, status) %>% 
+  summarise_at(vars(count), funs(sum)) %>% 
+  mutate(density_m2 = count/80) %>% 
+  print(shrubdensity_sum_all)
+
+shrubdensity_sum_age <- shrubdensity %>% # call tibble
+  filter(status == "mature") %>% # filter to select only mature shrubs
+  group_by(StandType, site_rep, status) %>% 
+  summarise_at(vars(count), funs(sum)) %>% 
+  mutate(density_m2 = count/80) %>% 
+  print(shrubdensity_sum_age)
+
+```
+```{r shrub density mean SD, aov, tukey at level of site rep to calculate at level of standtype, include=TRUE}
+shrubdensity_siterep_all_meanSD <- 
+
+shrubdensity_siterep_age_meanSD <- shrubdensity_sum_age %>%
+  group_by(StandType) %>%
+  summarise_at(vars(density_m2), funs(mean, sd)) %>% 
+  print(shrubdensity_siterep_age_meanSD)
+
+### Start here 
+
+
+standheight_siterep_standtype_aov <- aov((mean_height_cm ~ standtype) , data = standheight_siterep_meanSD)
+summary.aov(standheight_siterep_standtype_aov)
+
+standheight_siterep_standtype_tukey <- TukeyHSD(standheight_siterep_standtype_aov, conf.level=.95) 
+print(standheight_siterep_standtype_tukey)
 ```
 
 
+
+#################
 
 
 ```{r abcover select native and nonnative status, include=TRUE}
