--- a/Ch1_Degradation.Rmd
+++ b/Ch1_Degradation.Rmd
@@ -59,20 +59,20 @@ knitr::opts_chunk$set(message = FALSE)
 + You only need to do this once. 
 
 + Install packages in the Console. 
-
 ```{r install packages}
 # install.packages("ggplot2")
 # install.packages("ggpubr")
-install.packages("tidyverse")
+# install.packages("tidyverse")
+# install.packages( tidyverse, repo = 'https //mac.r-project.org')
 #install.packages("broom")
 #install.packages("AICcmodavg")
 #install.packages("janitor")
 #install.packages("multcompView")
-install.packages("devtools") # install An Bui California color pallets
-devtools::install_github("an-bui/calecopal")
+#install.packages("devtools") # install An Bui California color pallets
+#devtools::install_github("an-bui/calecopal")
 ```
 ```{r An Bui California color names}
-names(cal_palettes)
+# names(cal_palettes)
 ```
 
 
@@ -108,7 +108,7 @@ library(multcompView)
 
 # ABOVE GROUND 
 # overall species richness, native richness
-abrich_full <- read.csv("~/Dropbox/GRADSCHOOL/Dissertation/R_dissertation/GitHub/https:/github.com/steph4301/chaparraldegradation_2022.git/deg_abrich.csv", header = TRUE, na.strings=c("","NA"))
+abrich_full <- read.csv("~/Dropbox/GRADSCHOOL/Dissertation/R_dissertation/chaparraldegradation_2022b/deg_abrich.csv", header = TRUE, na.strings=c("","NA"))
 
 # percent cover
 abcover_full <- read.csv("~/Dropbox/GRADSCHOOL/Dissertation/R_dissertation/chaparraldegradation_2022b/deg_percentcover_byspecies_bylifeform.csv", header = TRUE, na.strings=c("","NA"))
@@ -510,6 +510,7 @@ Now, I need to identify the unique species at each site_rep_dist to get rid of d
 ```{r ab percent cover unique species by site_rep_dist, inclue = TRUE}
 abcover_bystatus <- abcover_full_v_omitground %>% 
   group_by(standtype, site, rep, site_rep, status) %>% 
+  filter(site_rep != "Intact4_4") %>% #omit Intact 4 from data
   filter(!is.na(species)) %>% # omit blank cells in species 
   dplyr::summarize(count_per_dist = n_distinct(site_rep_dist), percentcover = n_distinct(site_rep_dist)/41)
 # print(abcover_bystatus) # prints all rows of table
@@ -657,6 +658,7 @@ First, I need to count unique occurances of each native and non-native lifeform 
 ```{r percent cover of lifeform by status by site_rep, inclue = TRUE}
 abcover_bylf_bystatus <- abcover_full_v_omitground %>% 
   group_by(standtype, site, rep, site_rep, lifeform, status) %>% 
+  filter(site_rep != "Intact4_4") %>% #omit Intact 4 from data
   filter(!is.na(species)) %>% # omit blank cells in species 
   dplyr::summarize(count_per_dist = n_distinct(site_rep_dist), percentcover = n_distinct(site_rep_dist)/41)
 # print(abcover_bystatus) # prints all rows of table
